# watc

./: Cargo.toml  README.md
examples/: basic_usage.sh
src/: analysis.rs  binary.rs  cli.rs  lib.rs  libc.rs  main.rs
src/analysis/: readelf.rs  strings.rs  symbols.rs
src/binary/: common.rs  elf.rs  pe.rs
src/cli/: args.rs  output.rs
src/libc/: api.rs  matcher.rs
