[package]
name = "watc"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to analyze binaries and determine C library versions"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "watc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
goblin = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
regex = "1.0"
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
